# pytroleum

./: LICENSE  README.md  pyproject.toml
examples/: distribution_algorithm_check.py  liquid_liquid_hydrocyclone_modelling.py  net_with_pump.py  overflow_algorithm_check.py  pump_trial.py  simple_net.py  with_evaporation.py
src/pytroleum/: meter.py
src/pytroleum/plant/liquid_cyclone/: cyclone.py  flowsheets.py  interfaces.py  separation.py  utils.py  velocities.py
src/pytroleum/plant/solid_cyclone/: contour_example.py  distributions.py  efficiency.py  geometry.py  hydro_correct.py  hydrocyclone.py  hydrocyclone_new.py  model.py  physics.py  visuallization.py
src/pytroleum/sdyna/: conductors.py  controllers.py  convolumes.py  custom_solvers.py  interfaces.py  network.py  opdata.py
src/pytroleum/tdyna/: CoolStub.pyi  eos.py  eosi.py  utils.py
src/pytroleum/tport/: efflux.py
tests/: dummy_test.py  test_UnderPass.py  test_conductors.py  test_controllers.py  test_efflux.py  test_eos.py  test_meter.py  test_verticalvessel.py
