
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pytroleum"
authors = [{ name = "Amir Aslanov", email = "amiraslanov16@gmail.com" }]
description = "Python package for problem-solving in chemical engineering"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["one", "two"]
license = "MIT"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["numpy", "scipy", "CoolProp"]
dynamic = ["version"]

[tool.setuptools]
packages = [
    "pytroleum",
    "pytroleum.tdyna",
    "pytroleum.sdyna",
    "pytroleum.tport",
]
package-dir = { "pytroleum" = "src/pytroleum" }

[tool.setuptools.package-data]
pytroleum = ["**/*.pyi"]
